examples/test/testpolicy5525.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5525
  namespace: namespace153
spec:
  podSelector:
    matchLabels:
      key20: value24
      key48: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value40
      podSelector:
        matchLabels:
          key42: value38
          key5: value31
          key11: value18
